--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ body{
 
 /**  Main  **/
 
+main .main-container{
+    height: 100vh;
+    margin: 0px 210px;
+    padding-bottom: 20px;
+}
+
 main .main-head{
     display: flex;
     flex-direction: column;
@@ -28,9 +34,43 @@ main .main-head p{
     width: 500px;
     text-align: center;
     font-size: 14px;
-    margin: 0px 500px 0px;
     line-height: 30px;
+}
+
+/** Griglia Cards **/
+
+.team-cards-grid{
+    display: flex;
+    flex-wrap: wrap;
+    height: 100vh;
 
 }
 
-main .team-cards-grid .team-card
+main .team-card{
+    width: calc((100%/3) - 30px);
+    height: calc(100%/2 + 50px);
+    margin: 50px 0px 0px;
+    margin-left: 30px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+main .team-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-grow: 1;
+}
+
+main .team-card img{
+    width: 100%;
+}
+
+main .team-card h3,
+main .team-card p{
+    align-items: end;
+    color: #67615a;
+    text-align: center;
+}
+
