--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ main .main-head{
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: #67615a;
 }
 
 main .main-head h3{
@@ -73,4 +74,5 @@ main .team-card p{
     color: #67615a;
     text-align: center;
 }
+
 
